Issue #2192815 by johnv: Fixed broken features export since Workflow is an entity.
Issue #2189761 by johnv, zengenuity, naptown: Add Rules support for Workflow Field using 'EntityDefaultRulesController', removing custom code.
Issue #2019345 by johnv: Fixed workflow history is saved twice when adding transition via comment.
Issue #2187151 by johnv: Added an 'Actions buttons' widget to Workflow form on Comments and Entity form for Workflow Field .
Issue #2019345 by johnv: Added workflow_enable() and cleared texts.
Issue #2202405 by johnv: Added Rules action 'Set a workflow field state' to workflow_rules submodule.
Issue #2196587 by johnv: Fixed earlier introduced error in workflow.tokens.inc.
Issue #2196587 by johnv: Fixed Notice: Undefined property: stdClass::$workflow in workflow_tokens().
Issue #2200089 by johnv: Fixed PDOException: SQLSTATE[42S22] upon 'transition delete' when workflow_actions enabled.
Issue #2200089 by johnv: Fixed backwards compatiblity with workflow_actions.
Issue #2205707 by johnv: Moved some views handlers from workflow_extensions to workflow_views.
Issue #2205707 by johnv: Moved workflow_comment_edit_link field handler from workflow_extensions to workflow_views.
Issue #2208675 by johnv: Fixed Unnecessary db-calls upon node_load in workflow_node.
Issue #2208675 by johnv: Shorter code in workflow_state_formatter().
Issue #2019345 by johnv: Use api in workflow_search_api.
Issue #2168197 by johnv: Added VBO support for workflow_field, preventing assigning a state of an illegal Workflow.
Issue #2206923 by Uccio: Fixed Uninstall of workflow_actions doesn't remove actions.
Issue #2208971 by johnv: Fixed refresh entity_cache upon saving new workflow_node state in WorkflowTransition->execute().
Issue #2209359 by 2pha, johnv: Fixed workflow_access and other workflow_submodules when $field_name is not known.
Issue #2207423 by johnv: Removed double lock on workflow_actions for workflow_field.