@@ -427,3 +427,4 @@ Issue #2206923 by Uccio: Fixed Uninstall of workflow_actions doesn't remove acti
 Issue #2208971 by johnv: Fixed refresh entity_cache upon saving new workflow_node state in WorkflowTransition->execute().
 Issue #2209359 by 2pha, johnv: Fixed workflow_access and other workflow_submodules when $field_name is not known.
 Issue #2207423 by johnv: Removed double lock on workflow_actions for workflow_field.
+Issue #2210787 by johnv: Fixed avoid calling 'transition post' twice when workflow_actions is enabled.
